--- a/my-app/src/Components/Styles/Todo.scss
+++ b/my-app/src/Components/Styles/Todo.scss
@@ -6,9 +6,6 @@
     margin-bottom: 30px;
 }
 
-.fa-Trash{
-    margin-left: 30px;
-}
 
 .icon-btn{
     justify-content: space-between;
@@ -27,6 +24,7 @@ span{
     font-weight: bolder;
     font-size: 1.5rem;
     margin-right: 10px;
+    color: #000;
 }
 
 .completed{
