--- a/my-app/src/Components/Styles/TodoWrapper.scss
+++ b/my-app/src/Components/Styles/TodoWrapper.scss
@@ -2,12 +2,13 @@
     display: flex;
     flex-direction: column;
     width: 600px;
+    opacity: .6;
     height: fit-content;
     text-align: center;
     align-items: center;
     background-color: transparent;
     opacity: 90;
-    box-shadow: 0 0 10px #000;
+    box-shadow:  0 0 10px #000;
     margin-top: 250px;
     margin-bottom: 100px;
     border-radius: 20px;
