--- a/my-app/src/Components/Styles/TodoForm.scss
+++ b/my-app/src/Components/Styles/TodoForm.scss
@@ -4,7 +4,7 @@ body{
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background-image: url('../../Image/scene-Dumbo.webp');
+    background-image: url('../../Image/pexels-ann-h-45017-1762851.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -12,29 +12,38 @@ body{
 .todo-input{
     border: none;
     background-color: #fff;
+    opacity: .8;
     width: 300px;
     height: 50px;
     font-size: 1rem;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border-radius: 8px;
     margin-bottom: 50px;
-    margin-right: 2px;
+    margin-right: 5px;
     &:hover{
         background-color:#fdfdfd ;  
         border: 2px solid black; 
     }
 }
 
+.faAdd{
+    font-size: 1.2rem;
+}
+
 .todo-btn{
     width: 60px;
     height: 50px;
-    border-radius: 4px;
+    border-radius: 8px;
     border: none;
-    color: #fff;
-    background-color: black;
+    color: black;
+    font-weight: bolder;
+    background-color: transparent;
+    border: 2px solid black;
+    opacity: .6;
+    box-shadow: inset 0 0 3px 3px ;
     &:hover{
         transition: 2s;
-        background-color: #ff9ca5;
+        
     }
 }
 
